--- a/app.json
+++ b/app.json
@@ -1,38 +1,38 @@
 {
-  "expo": {
-    "name": "my-expo-app",
-    "slug": "my-expo-app",
-    "version": "1.0.0",
-
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-
-    "experiments": {
-      "tsconfigPaths": true
-    },
-
-    "plugins": [],
-
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-
-    "userInterfaceStyle": "light",
-
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+   "expo": {
+      "name": "mini_calc",
+      "slug": "mini_calc",
+      "version": "1.0.0",
+      "web": {
+         "favicon": "./assets/favicon.png"
+      },
+      "experiments": {
+         "tsconfigPaths": true
+      },
+      "plugins": [],
+      "orientation": "portrait",
+      "icon": "./assets/calc-icon.png",
+      "userInterfaceStyle": "light",
+      "splash": {
+         "image": "./assets/splash.png",
+         "resizeMode": "contain",
+         "backgroundColor": "#000000"
+      },
+      "assetBundlePatterns": ["**/*"],
+      "ios": {
+         "supportsTablet": true
+      },
+      "android": {
+         "adaptiveIcon": {
+            "foregroundImage": "./assets/adaptive-icon.png",
+            "backgroundColor": "#000000"
+         },
+         "package": "com.oakomdigital.mini_calc"
+      },
+      "extra": {
+         "eas": {
+            "projectId": "c0307d91-ba0f-4ed2-9716-ec555da1420a"
+         }
       }
-    }
-  }
+   }
 }
