--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
       "web": "expo start --web",
       "prettier": "prettier --write .",
-      "expoBuild": "eas build --platform android --profile production"
+      "build:android": "eas build --platform android --profile production",
+      "test": "jest"
    },
    "dependencies": {
       "@expo/metro-runtime": "~5.0.4",
@@ -18,26 +19,37 @@
       "expo": "^53.0.10",
       "expo-status-bar": "~2.2.3",
       "lucide-react-native": "^0.511.0",
-      "nativewind": "latest",
-      "react": "19.0.0",
-      "react-dom": "19.0.0",
+      "nativewind": "^4.1.23",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
       "react-native": "0.79.3",
-      "react-native-reanimated": "~3.17.4",
+      "react-native-reanimated": "^3.18.0",
       "react-native-safe-area-context": "5.4.0",
       "react-native-svg": "15.11.2",
       "react-native-web": "^0.20.0",
+      "react-test-renderer": "^19.1.0",
       "tailwind-merge": "^3.3.0"
    },
    "devDependencies": {
-      "@babel/core": "^7.20.0",
-      "@types/react": "~19.0.10",
-      "eslint": "^9.25.1",
+      "@babel/core": "^7.27.4",
+      "@babel/preset-typescript": "^7.27.1",
+      "@jest/globals": "^30.0.0-beta.3",
+      "@react-native-community/cli": "^18.0.0",
+      "@testing-library/jest-native": "^5.4.3",
+      "@testing-library/react-native": "^13.2.0",
+      "@types/jest": "^29.5.14",
+      "@types/react": "^19.1.6",
+      "@types/react-native": "^0.73.0",
+      "eslint": "^9.28.0",
       "eslint-config-expo": "^9.2.0",
-      "eslint-config-prettier": "^10.1.2",
-      "knip": "^5.59.1",
-      "prettier": "^3.2.5",
-      "prettier-plugin-tailwindcss": "^0.5.11",
-      "tailwindcss": "^3.4.0",
+      "eslint-config-prettier": "^10.1.5",
+      "jest": "~29.7.0",
+      "jest-expo": "~53.0.7",
+      "knip": "^5.60.2",
+      "prettier": "^3.5.3",
+      "prettier-plugin-tailwindcss": "^0.5.14",
+      "tailwindcss": "^3.4.17",
+      "ts-jest": "^29.3.4",
       "typescript": "~5.8.3"
    },
    "main": "node_modules/expo/AppEntry.js",
