--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,36 @@
 {
-   "extends": "expo/tsconfig.base",
    "compilerOptions": {
+      "target": "esnext",
+      "module": "esnext",
+      "lib": ["esnext"],
+      "allowJs": true,
+      "jsx": "react-native",
+      "noEmit": true,
+      "isolatedModules": false,
       "strict": true,
-      "jsx": "react-jsx",
-
-      "baseUrl": ".",
+      //"moduleResolution": "node16",
+      "allowSyntheticDefaultImports": true,
+      "esModuleInterop": true,
+      // ? Custom ones
+      "skipLibCheck": true,
+      "resolveJsonModule": true,
+      "noImplicitAny": true,
+      "strictNullChecks": true,
+      "strictFunctionTypes": true,
+      "strictPropertyInitialization": true,
+      "noImplicitThis": true,
+      "alwaysStrict": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitReturns": true,
+      "noFallthroughCasesInSwitch": true,
+      "forceConsistentCasingInFileNames": true,
+      // ? Babel Plugin Module Resolver
+      "baseUrl": "./src",
       "paths": {
-         "~/*": ["src/*"]
+         "~/*": ["*"]
       }
-   }
+   },
+   "extends": "expo/tsconfig.base",
+   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
