--- a/app.json
+++ b/app.json
@@ -1,39 +1,53 @@
 {
-   "expo": {
-      "name": "minimalist_calculator",
-      "slug": "minimalist_calculator",
-      "version": "1.0.0",
-      "web": {
-         "favicon": "./assets/favicon.png"
+  "expo": {
+    "name": "minimalist_calculator",
+    "slug": "minimalist_calculator",
+    "version": "1.0.0",
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "experiments": {
+      "tsconfigPaths": true,
+      "reactCanary": true
+    },
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "enableProguardInReleaseBuilds": true,
+            "enableShrinkResourceslnReleaseBuilds": true,
+            "useLegacyPackaging": true
+          }
+        }
+      ]
+    ],
+    "orientation": "portrait",
+    "icon": "./assets/calc-icon.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#000000"
       },
-      "experiments": {
-         "tsconfigPaths": true,
-         "reactCanary": true
-      },
-      "plugins": [],
-      "orientation": "portrait",
-      "icon": "./assets/calc-icon.png",
-      "userInterfaceStyle": "light",
-      "splash": {
-         "image": "./assets/splash.png",
-         "resizeMode": "contain",
-         "backgroundColor": "#000000"
-      },
-      "assetBundlePatterns": ["**/*"],
-      "ios": {
-         "supportsTablet": true
-      },
-      "android": {
-         "adaptiveIcon": {
-            "foregroundImage": "./assets/adaptive-icon.png",
-            "backgroundColor": "#000000"
-         },
-         "package": "com.oakomdigital.minimalist_calculator"
-      },
-      "extra": {
-         "eas": {
-            "projectId": "c0307d91-ba0f-4ed2-9716-ec555da1420a"
-         }
+      "enableDangerousExperimentalLeanBuilds": true,
+      "package": "com.oakomdigital.minimalist_calculator"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "603b1098-2828-4f5d-9faf-d3b46fcfc708"
       }
-   }
+    }
+  }
 }
