--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@expo/metro-runtime": "~5.0.4",
       "clsx": "^2.1.1",
       "expo": "^53.0.10",
+      "expo-build-properties": "^0.14.6",
       "expo-status-bar": "~2.2.3",
       "lucide-react-native": "^0.511.0",
       "nativewind": "^4.1.23",
