--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
    "dependencies": {
       "@expo/metro-runtime": "~5.0.4",
       "clsx": "^2.1.1",
-      "expo": "^53.0.10",
+      "expo": "53.0.11",
       "expo-build-properties": "^0.14.6",
       "expo-status-bar": "~2.2.3",
       "lucide-react-native": "^0.511.0",
       "nativewind": "^4.1.23",
-      "react": "19.1.0",
-      "react-dom": "19.1.0",
+      "react": "19.0.0",
+      "react-dom": "19.0.0",
       "react-native": "0.79.3",
-      "react-native-reanimated": "^3.18.0",
+      "react-native-reanimated": "~3.17.4",
       "react-native-safe-area-context": "5.4.0",
       "react-native-svg": "15.11.2",
       "react-native-web": "^0.20.0",
-      "react-test-renderer": "^19.1.0",
+      "react-test-renderer": "19.0.0",
       "tailwind-merge": "^3.3.0"
    },
    "devDependencies": {
@@ -39,7 +39,7 @@
       "@testing-library/jest-native": "^5.4.3",
       "@testing-library/react-native": "^13.2.0",
       "@types/jest": "^29.5.14",
-      "@types/react": "^19.1.6",
+      "@types/react": "~19.0.10",
       "@types/react-native": "^0.73.0",
       "eslint": "^9.28.0",
       "eslint-config-expo": "^9.2.0",
